--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,18 @@
   <packaging>war</packaging>
 
   <properties>
-    <spring.mvc>4.0.0.RELEASE</spring.mvc>
+    <spring.mvc>4.2.0.RELEASE</spring.mvc>
     <javax.servlet>3.0.1</javax.servlet>
     <jstl.version>1.2</jstl.version>
-    <spring.securiry>3.2.0.RELEASE</spring.securiry>
+    <spring.securiry>4.2.0.RELEASE</spring.securiry>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>${spring.mvc}</version>
+      <version>4.2.0.RELEASE</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
@@ -65,13 +64,33 @@
       <artifactId>spring-security-taglibs</artifactId>
       <version>${spring.securiry}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.0.0.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.11.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.0.2.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.0.2.Final</version>
+    </dependency>
+
 
   </dependencies>
 
   <build>
     <finalName>secure-exam</finalName>
     <plugins>
-
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -79,23 +98,18 @@
           <target>1.7</target>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>9.2.1.v20140609</version>
         <configuration>
           <httpConnector>
-            <!--host>localhost</host-->
             <port>9999</port>
           </httpConnector>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 
 </project>
-
-
 
